--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ bofore_install:
   - docker build -t nnoussair/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run nnoussair/docker-react npm run test -- --coverage
+  - docker run -e CI=true nnoussair/docker-react npm run test
