--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ bofore_install:
 
 script:
   - docker run -e CI=true nnoussair/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "DockerReact"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-west-2-799960955376"
+  bucket_path: "DockerReact"
+  on:
+    branch: master
+
+  acess_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
