--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,4 @@ deploy:
     branch: master
 
   acess_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: $AWS_SECRET_KEY
+  secret_access_key: $AWS_SECRET_KEY
