--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
-  app: "DockerReact"
+  app: "docker-react"
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-us-west-2-799960955376"
-  bucket_path: "DockerReact"
+  bucket_path: "docker-react"
   on:
     branch: master
 
